# chimerax-rdkit-conformer

./: .gitignore  README.md  pyproject.toml  smiles_to_sdf.py
bundle-direct/: pyproject.toml
bundle-direct/src/: __init__.py  cmd.py  rdkit_ops.py
bundle-direct/tests/: conftest.py  test_rdkit_ops.py
bundle-uv/: pyproject.toml
bundle-uv/docs/plans/: 2026-02-24-direct-model-design.md  2026-02-24-multi-conformer-plan.md  2026-02-24-optimize-minimize-design.md  2026-02-24-optimize-minimize-plan.md
bundle-uv/src/: cmd.py
bundle-uv/tests/: conftest.py  test_input_to_json.py
docs/plans/: 2026-02-23-multi-format-input-design.md  2026-02-23-multi-format-input-plan.md  2026-02-24-direct-model-plan.md  2026-02-24-multi-conformer-design.md
plans/: linear-discovering-llama.md  purring-percolating-gizmo.md
scripts/: smoke.cxc
src/: __init__.py  cmd.py  input_to_json.py  input_to_sdf.py  smiles_to_sdf.py
tests/: conftest.py  test_input_to_json.py  test_input_to_sdf.py
