[build-system]
requires = ["ChimeraX-BundleBuilder"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-RDKitSMILES"
version = "0.1.0"
description = "Generate 3D molecules from SMILES using RDKit ETKDGv3"
license = { text = "MIT" }
dynamic = ["classifiers", "requires-python"]

[chimerax]
package = "chimerax.rdkit_smiles"
pure = true
min-session-version = 1
max-session-version = 1
categories = ["Structure Generation"]
classifiers = []

[chimerax.command.rdksmiles]
category = "Structure Generation"
description = "Generate 3D structure from SMILES using RDKit ETKDGv3"

[chimerax.package-data]
"src/" = ["smiles_to_sdf.py"]
