[build-system]
requires = ["ChimeraX-BundleBuilder"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-RDKitConformer"
version = "0.7.0"
description = "Generate 3D conformers from molecular notations using RDKit ETKDGv3"
license = "MIT"
dynamic = ["classifiers", "requires-python"]

[chimerax]
package = "chimerax.rdkit_conformer"
pure = true
min-session-version = 1
max-session-version = 1
categories = ["Structure Generation"]
classifiers = []

[chimerax.command.rdkconf]
category = "Structure Generation"
description = "Generate 3D conformer from molecular notation using RDKit ETKDGv3"
